--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <!-- HEADER [ SECTION ] -->
                 <header class="header_section" id="header">
                     <img src="asset/images/icons/calcProject.png" alt="Calculator Icon" class="header_icon" draggable="false">
-                    <h1 class="header_title">👋 Welcome to "How to Calculate" 👋</h1>
+                    <h1 class="header_title">Welcome to "How to Calculate"</h1>
                     <p class="header_description">
                         This guide will walk you through creating different types of calculators using <b>HTML</b> and <b>JavaScript</b>. 
                         Each section includes a description, code breakdown, and a live module for you to interact with.
