--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="description" content="Step-by-step guide to creating a calculator using HTML, CSS, and JavaScript. Learn by example with live code and explanations.">
         <meta name="keywords" content="HTML calculator, JavaScript calculator, learn JavaScript, web development, code example">
         <meta name="author" content="Michael Yurachek">
-        <base href="/CalculatorProject/">
+        <base href="/HowToCalculate/">
         <!-- Favicon -->
         <link rel="icon" href="asset/images/icons/calcProject.png" type="image/png">
         <!-- Stylesheets -->
